--- a/ldod-visual/src/components/Fragment.css
+++ b/ldod-visual/src/components/Fragment.css
@@ -8,7 +8,6 @@
   /* box-shadow: 0 10px 70px rgba(0,0,0,0.4); */
   margin-bottom: 2%;
   margin-top: 30px;
-  display: fixed;
 }
 
 .loadingGifCentered {
